--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@
     <script type="text/javascript">
       var segmentCount = 1;
       var l = window.location;
-      var repoName = "/Chrono-Guide-Vercel-Patch-P";
+      var repoName = "/Chrono-Guide/";
       var pagePath = repoName + "/encyclopedia";
       l.replace(
         l.protocol +
